fixed broken CSS styles for full-width button

--- a/web/application/views/css/ilios-styles.css
+++ b/web/application/views/css/ilios-styles.css
@@ -112,7 +112,7 @@ ul.large li {
 .button.secondary.disabled, .button.secondary.disabled:hover, .button.secondary[disabled]:hover {background-color: #e9e9e9; color: #999;}
 .button.radius { -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; }
 .button.round { -webkit-border-radius: 1000px; -moz-border-radius: 1000px; -ms-border-radius: 1000px; -o-border-radius: 1000px; border-radius: 1000px; }
-.button.full-width { width: 100%; text-align: center; padding-left: 0 !important; padding-right: !important; }
+.button.full-width { width: 100%; text-align: center; padding-left: 0 !important; padding-right: 0 !important; }
 .button.left-align { text-align: left; text-indent: 12px; }
 .button.disabled, .button[disabled] { opacity: 0.6; cursor: default; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
 .button:not(.secondary):visited {color:#FFF;}
